--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "c:\\Users\\Samuel\\Documents\\Meus Sites\\Max_chaveiro\\Chaveiro\\index.html"
+    "livePreview.defaultPreviewPath": "c:\\Users\\Samuel\\Documents\\Meus Sites\\Max_chaveiro\\Max_chaveiro\\Chaveiro\\index.html"
 }
