--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/Max_chaveiro/Chaveiro/index.html"
+    "livePreview.defaultPreviewPath": "/index.html"
 }
